Исправлены ошибки в мобильной версии

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!--Шапка, навигация-->
 		<header class="page-header">
 		<div class="page-header__wrap">
-            <a class="menu-close" href="/"></a>
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item"><a class="navigation__link" href="#">Карта штата</a></li>
@@ -19,14 +18,15 @@
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
 				</ul>
+				<a class="menu-close" href="/"></a>
 			</nav>
-            <a class="menu-open" href="/"></a>
             
 			<!--Логотип-->
 			<div class="logo">
 		    	<a class="logo__link" href="index.html">
 		        	<img src="img/logo.png" alt="logo">
 		    	</a>
+		    	<a class="menu-open" href="/"></a>
 			</div>
 		</div>
 		</header>
@@ -109,28 +109,28 @@
 				</div>
 
 				<!--3,4,5 Причины-->
-				<div class="reasons">
-		            <div class="reasons__wrap">
-				    	<div class="reasons__item">
+				<div class="features">
+		            <div class="features__wrap">
+				    	<div class="features__item">
 							<!--Заголовок 3 причины-->
-							<div class="reasons__header">
-								<h2 class="reasons__title">Небольшая площадь</h2>
-								<p class="reasons__number">-№3-</p>
-								<p class="reasons__descr-title">Все достопримечательности находятся очень близко</p>
+							<div class="features__header">
+								<h2 class="features__title">Небольшая площадь</h2>
+								<p class="features__number">-№3-</p>
+								<p class="features__descr-title">Все достопримечательности находятся очень близко</p>
 							</div>
 				    	</div>
-				    	<div class="reasons__item">
-							<div class="reasons__header">
-								<h2 class="reasons__title">Красивая дорога</h2>
-								<p class="reasons__number">-№4-</p>
-								<p class="reasons__descr-title">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+				    	<div class="features__item">
+							<div class="features__header">
+								<h2 class="features__title">Красивая дорога</h2>
+								<p class="features__number">-№4-</p>
+								<p class="features__descr-title">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 							</div>
 				    	</div>
-				    	<div class="reasons__item">
-							<div class="reasons__header">
-								<h2 class="reasons__title">Красивая дорога</h2>
-								<p class="reasons__number">-№5-</p>
-								<p class="reasons__descr-title">Большинство едет в Гранд Каньон и толпится там</p>
+				    	<div class="features__item">
+							<div class="features__header">
+								<h2 class="features__title">Красивая дорога</h2>
+								<p class="features__number">-№5-</p>
+								<p class="features__descr-title">Большинство едет в Гранд Каньон и толпится там</p>
 							</div>
 				    	</div>
 		            </div>
@@ -141,7 +141,7 @@
 		        <div class="offer__wrap">
 		    		<h2 class="offer__title">Заинтересовались?</h2>
 		    		<p class="offer__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-		    		<a class="offer__btn" href="#">Найти гостиницу</a>
+		    		<a class="offer__btn" href="form.html">Найти гостиницу</a>
 		        </div>
 			</section>
 
@@ -156,7 +156,7 @@
 		<footer class="page-footer">
 			<div class="page-footer__wrap">
 				<div class="page-footer__item">
-					<a class="page-footer__link-hashtag" href="/">#Visitsedona</a>
+					<a class="page-footer__link-hashtag" href="#">#Visitsedona</a>
 				</div>
 				<div class="social-links">
 					<a class="social-links__item social-links__item--tw" href="http://tw.com"></a>
@@ -164,7 +164,7 @@
 					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru"></a>
 				</div>
 				<div class="page-footer__item">
-					<a class="page-footer__link-copyright" href="/">Разработано</a>
+					<p>Разработано<a class="page-footer__link-copyright" href="#"></a></p>
 				</div>
 			</div>
 		</footer>
