--- a/form.html
+++ b/form.html
@@ -12,7 +12,6 @@
     <!--Шапка, навигация-->
 		<header class="page-header">
 		<div class="page-header__wrap">
-            <a class="menu-close" href="/"></a>
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item"><a class="navigation__link" href="#">Карта штата</a></li>
@@ -20,14 +19,15 @@
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
 				</ul>
+				<a class="menu-close" href="/"></a>
 			</nav>
-            <a class="menu-open" href="/"></a>
             
 			<!--Логотип-->
 			<div class="logo">
 		    	<a class="logo__link" href="index.html">
 		        	<img src="img/logo.png" alt="logo">
 		    	</a>
+		    	<a class="menu-open" href="/"></a>
 			</div>
 		</div>
 		</header>
@@ -89,11 +89,11 @@
 							     <div class="quantity">
 								    <label for="quantity-day">Длительность пребывания:</label>
 								    <a class="quantity__button quantity__button--left" href="#"></a>
-								    <input type="number" id="quantity-day" value="14"><span></span></input>
+								    <input type="text" id="quantity-day" value="14"><span></span></input>
 								    <a class="quantity__button quantity__button--right" href="#"></a>
 							     </div>
 							     <label for="date-end">Дата отъезда:</label>
-                                 <input type="text" id="date-end" name="date-end" value="28 июля 2015"></input>
+                                 <input type="text" id="date-end" name="date-end" value="28 июля 2015" autofocus></input>
                             </div>
 						</div>
 						<!--Кол-во путешественников-->
@@ -103,7 +103,7 @@
 							     <div class="quantity">
 								    <label for="number-person">Количество путешественников</label>
 								    <a class="quantity__button quantity__button--left" href="#"></a>
-								    <input type="number" id="number-person" value="2"><span></span></input>
+								    <input type="text" id="number-person" value="2"><span></span></input>
 								    <a class="quantity__button quantity__button--right" href="#"></a>
 							     </div>
                             </div>
@@ -114,7 +114,7 @@
 							     <div class="data-travel__item-person">
 								    <div class="data-travel__number">
                                         <label for="number-travel">№</label>
-                                        <input type="text" id="number-travel" name="number" value="1"></input>
+                                        <div id="number-travel" name="number">1</div>
 								    </div>
 								    <div class="data-travel__person">
 									   <label for="last-name__person1">Фамилия:</label>
@@ -128,7 +128,7 @@
 							     <div class="data-travel__item-person">
 								    <div class="data-travel__number">
 									   <label for="number-travel">№</label>
-									   <input type="text" id="number-travel" name="number" value="2"></input>
+									   <div id="number-travel" name="number">2</div>
 								    </div>
 								    <div class="data-travel__person">
 									   <label for="last-name__person2">Фамилия:</label>
@@ -171,8 +171,8 @@
                             <div class="images__wrap">
                                  <h2 class="images__title">Загрузите фотографии:</h2>
                                  
-                                 <input type="file" name="img" accept="image/*"></input>
-                                 <label for="file">Выбрать фотографии</label>
+                                <!--<input type="file" name="img" accept="image/*"></input>-->
+                                 <input class="images__btn-download" type="button" for="file" value="Выбрать фотографии"></input>
                                 <div class="images__item"><a class="images__item--close-icon" href="#"></a><img src="img/image-1.png"></img></div>
                                 <div class="images__item"><a class="images__item--close-icon" href="#"></a><img src="img/image-2.png"></img></div>
                                 <div class="images__item"><a class="images__item--close-icon" href="#"></a><img src="img/image-3.png"></img></div>
@@ -201,10 +201,10 @@
 					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru"></a>
 				</div>
 				<div class="page-footer__item">
-					<a class="page-footer__link-copyright" href="#">Разработано</a>
+					<p>Разработано<a class="page-footer__link-copyright" href="#"></a></p>
 				</div>
 			</div>
-		</footer>
+	</footer>
 </div> 
     <!-- <script src="js/script.js"></script> -->
 </html>
