--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Главная страница</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -63,7 +64,7 @@
 		            </div>
 						<!--Картинка 1 причины-->
 						<div class="reason__image">
-							<img src="img/reason1.jpg"></img>
+							<img src="img/photo-city@1x.jpg"></img>
 						</div>
 		        </div>
 
@@ -104,7 +105,7 @@
 		            </div>
 						<!--Картинка 2 причины-->
 						<div class="reason__image">
-							<img src="img/reason2.jpg"></img>
+							<img src="img/photo-bridge@1x.jpg"></img>
 						</div>  
 				</div>
 
@@ -128,7 +129,7 @@
 				    	</div>
 				    	<div class="features__item">
 							<div class="features__header">
-								<h2 class="features__title">Красивая дорога</h2>
+								<h2 class="features__title">Мало туристов</h2>
 								<p class="features__number">-№5-</p>
 								<p class="features__descr-title">Большинство едет в Гранд Каньон и толпится там</p>
 							</div>
@@ -147,7 +148,7 @@
 
 			<!--Карта-->
 			<div class="map">
-		    	<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=-TtMc0Ptg0qY-C9cVs2CgPiGa8rjC-3_&width=320&height=350&lang=ru_RU&sourceType=constructor"></script>
+		    	<script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=-TtMc0Ptg0qY-C9cVs2CgPiGa8rjC-3_&width=100%&height=350&lang=ru_RU&sourceType=constructor"></script>
 			</div>
 		</div>
 		</main>
