--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 				<!--2 Причина-->
 				<div class="reason">
-		            <div class="reason__wrap">
+		            <div class="reason__wrap reason__wrap--change">
 						<!--Заголовок 2 причины-->
 						<div class="reason__header">
 							<h2 class="reason__title">Там есть мост дьявол</h2>
