Поправлены стили для планшетной версии главной страницы

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<ul class="navigation__list">
 					<li class="navigation__item"><a class="navigation__link" href="#">Карта штата</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Информация</a></li>
+					<li class="navigation__item"></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
 				</ul>
@@ -24,7 +25,7 @@
             
 			<!--Логотип-->
 			<div class="logo">
-		    	<a class="logo__link" href="index.html">
+				<a class="logo__link" href="index.html">
 		        	<img src="img/logo.png" alt="logo">
 		    	</a>
 		    	<a class="menu-open" href="/"></a>
@@ -117,7 +118,7 @@
 							<div class="features__header">
 								<h2 class="features__title">Небольшая площадь</h2>
 								<p class="features__number">-№3-</p>
-								<p class="features__descr-title">Все достопримечательности находятся очень близко</p>
+								<p class="features__descr-title">Все&nbsp;достопримечательности находятся очень близко</p>
 							</div>
 				    	</div>
 				    	<div class="features__item">
@@ -165,7 +166,7 @@
 					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru"></a>
 				</div>
 				<div class="page-footer__item">
-					<p>Разработано<a class="page-footer__link-copyright" href="#"></a></p>
+					<p class="page-footer__dev">Разработано<a class="page-footer__link-copyright" href="#"></a></p>
 				</div>
 			</div>
 		</footer>
