Добавлены модальные окна для страницы form.html

--- a/form.html
+++ b/form.html
@@ -253,6 +253,20 @@
 							</div>
 						</form>
 					</div>
+					<div class="error">
+						<div class="error__wrap">
+							<h1 class="error__title">Что-то пошло не так!</h1>
+							<p class="error__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+							<a class="error__btn">Ок</a>
+						</div>
+					</div>
+					<div class="success">
+						<div class="success__wrap">
+							<h1 class="success__title">Ваш отзыв отправлен!</h1>
+							<p class="success__text">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+						</div>
+						<div class="success__btn"><a>Закрыть окно</a></div>
+					</div>
 				</div>
 			</div>
 		</main>
