Планшетная версия страницы form.html

--- a/form.html
+++ b/form.html
@@ -147,16 +147,18 @@
 	                                        <div id="number-travel" name="number">1</div>
 									    </div>
 									    <div class="data-travel__person-name">
-										   <label for="last-name__person1">Фамилия:</label>
-										   <input type="text" id="last-name__person1" name="last-name" value="Иванов"></input>
-										</div>
-										<div class="data-travel__person-name">
-										   <label for="first-name__person1">Имя:</label>
-										   <input type="text" id="first-name__person1" name="first-name" value="Пётр"></input>
-										</div>
-										<div class="data-travel__person-name">
-										   <label for="patronymic__person1">Отчество:</label>
-										   <input type="text" id="patronymic__person1" name="patronymic" value="Александрович"></input>
+									    	<div class="data-travel__last-name">
+										   		<label for="last-name__person1">Фамилия:</label>
+										   		<input type="text" id="last-name__person1" name="last-name" value="Иванов"></input>
+											</div>
+											<div class="data-travel__first-name">
+										   		<label for="first-name__person1">Имя:</label>
+										   		<input type="text" id="first-name__person1" name="first-name" value="Пётр"></input>
+											</div>
+											<div class="data-travel__patronymic">
+										   		<label for="patronymic__person1">Отчество:</label>
+										   		<input type="text" id="patronymic__person1" name="patronymic" value="Александрович"></input>
+									    	</div>
 									    </div>
 								     </div>
 								     <div class="data-travel__item-person">
@@ -165,16 +167,18 @@
 										   <div id="number-travel" name="number">2</div>
 									    </div>
 									    <div class="data-travel__person-name">
-										   <label for="last-name__person2">Фамилия:</label>
-										   <input type="text" id="last-name__person2" name="last-name" value="Иванов"></input>
-										</div>
-										<div class="data-travel__person-name">
-										   <label for="first-name__person2">Имя:</label>
-										   <input type="text" id="first-name__person2" name="first-name" value="Пётр"></input>
-										</div>
-										<div class="data-travel__person-name">
-										   <label for="patronymic__person2">Отчество:</label>
-										   <input type="text" id="patronymic__person2" name="patronymic" value="Александрович"></input>
+									    	<div class="data-travel__last-name">
+										   		<label for="last-name__person1">Фамилия:</label>
+										   		<input type="text" id="last-name__person1" name="last-name" value="Иванов"></input>
+											</div>
+											<div class="data-travel__first-name">
+										   		<label for="first-name__person1">Имя:</label>
+										   		<input type="text" id="first-name__person1" name="first-name" value="Пётр"></input>
+											</div>
+											<div class="data-travel__patronymic">
+										   		<label for="patronymic__person1">Отчество:</label>
+										   		<input type="text" id="patronymic__person1" name="patronymic" value="Александрович"></input>
+									    	</div>
 									    </div>
 								     </div>
 	                            </div>
