Добавлены эффекты при наведении: ссылки, кнопки, радио-кнопки, чекбоксы, текстовые поля ввода

--- a/form.html
+++ b/form.html
@@ -15,10 +15,10 @@
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item"><a class="navigation__link" href="#">Карта штата</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Информация</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="index.html">Информация</a></li>
 					<li class="navigation__item"></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
+					<li class="navigation__item"><a class="navigation__link navigation__link--active" href="#">Гостиницы</a></li>
 				</ul>
 				<a class="menu-close" href="/"></a>
 			</nav>
@@ -115,7 +115,7 @@
 									    </div>
 									    <div class="info-travel__item">
 									    	<label for="date-end">Дата отъезда:</label>
-		                                 	<input type="text" id="date-end" name="date-end" value="28 июля 2015" autofocus></input>
+		                                 	<input type="text" id="date-end" name="date-end" value="28 июля 2015"></input>
 									    </div>
 									</div>
 	                            </div>
@@ -284,7 +284,7 @@
 		<div class="error__wrap">
 			<h1 class="error__title">Что-то пошло не так!</h1>
 			<p class="error__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-			<a class="error__btn">Ок</a>
+			<a class="error__btn" href="#">Ок</a>
 		</div>
 	</div>
 	<div class="success">
@@ -292,7 +292,7 @@
 			<h1 class="success__title">Ваш отзыв отправлен!</h1>
 			<p class="success__text">Спасибо за Ваше участие, Ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
 		</div>
-		<div class="success__btn"><a>Закрыть окно</a></div>
+		<div class="success__btn"><a href="#">Закрыть окно</a></div>
 	</div>
   </body>
     <!-- <script src="js/script.js"></script> -->
