--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item"><a class="navigation__link" href="#">Карта штата</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Информация</a></li>
+					<li class="navigation__item"><a class="navigation__link navigation__link--active" href="index.html">Информация</a></li>
 					<li class="navigation__item"></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
