--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li class="navigation__item"><a class="navigation__link navigation__link--active" href="index.html">Информация</a></li>
 					<li class="navigation__item"></li>
 					<li class="navigation__item"><a class="navigation__link" href="#">Фото и видео</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#">Гостиницы</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="form.html">Гостиницы</a></li>
 				</ul>
 				<a class="menu-close" href="/"></a>
 			</nav>
@@ -43,10 +43,24 @@
 		    		<img class="card__main-logo" src="img/card__main-logo.png" alt="Sedona"></img>
 		    		<img class="card__slogan" src="img/card__slogan.png" alt="Because the Grand Canyon sucks!"></img>
 		  		</div>
+		  		<svg class="card__svg-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" 
+		  			y="0px" width="1202px" height="57px" viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
+					<g>
+						<polygon fill="#FFFFFF" points="250,23.71 0,0 0,57 250,57 601,57 250,0 	"/>
+						<polygon fill="#FFFFFF" points="952,23.71 952,0 601,57 952,57 1202,57 1202,0"/>
+					</g>
+				</svg>
 			</div>
 
 			<!--Описание-->
 			<div class="description">
+				<svg class="description__svg-triangle" version="1.1" id="Layer_1" 
+						xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1202px" height="57px" viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
+						<g>
+							<polygon fill="#81b3d2" points="250,23.71 0,0 0,57 250,57 601,57 250,0 	"/>
+							<polygon fill="#81b3d2" points="952,23.71 952,0 601,57 952,57 1202,57 1202,0"/>
+						</g>
+				</svg>
 				<div class="description__wrap">
 					<h1 class="description__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
 					<p class="description__text">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
@@ -63,10 +77,10 @@
 							<p class="reason__descr-title">Седона не атракцион для туристов, там течет своя жизнь</p>
 						</div>
 		            </div>
-						<!--Картинка 1 причины-->
-						<div class="reason__image">
+					<!--Картинка 1 причины-->
+					<div class="reason__image">
 							<img src="img/photo-city@1x.jpg"></img>
-						</div>
+					</div>
 		        </div>
 
 				<!--Описание причины 1-->
@@ -143,7 +157,7 @@
 		        <div class="offer__wrap">
 		    		<h2 class="offer__title">Заинтересовались?</h2>
 		    		<p class="offer__text">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-		    		<a class="offer__btn" href="form.html">Найти гостиницу</a>
+		    		<a class="offer__btn" href="#">Найти гостиницу</a>
 		        </div>
 			</section>
 
@@ -155,18 +169,54 @@
 		</main>
 
 		<!--Футер-->
-		<footer class="page-footer">
+				<footer class="page-footer">
 			<div class="page-footer__wrap">
 				<div class="page-footer__item">
 					<a class="page-footer__link-hashtag" href="#">#Visitsedona</a>
 				</div>
 				<div class="social-links">
-					<a class="social-links__item social-links__item--tw" href="http://tw.com"></a>
-					<a class="social-links__item social-links__item--fb" href="http://fb.com"></a>
-					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru"></a>
+					<a class="social-links__item social-links__item--tw" href="http://tw.com">
+						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+							<g id="W6EeEF_1_">
+								<g>
+									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15
+										c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86
+										c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0
+										c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881
+										c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461
+										c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+								</g>
+							</g>
+						</svg>
+					</a>
+					<a class="social-links__item social-links__item--fb" href="http://fb.com">
+						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+							x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+							<path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114
+							H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787
+							C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+						</svg>
+					</a>
+					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru">
+						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+							x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+							<path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.	835-2.835V2.835
+							C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+						</svg>
+					</a>
 				</div>
 				<div class="page-footer__item">
-					<p class="page-footer__dev">Разработано<a class="page-footer__link-copyright" href="#"></a></p>
+					<p class="page-footer__dev">Разработано<a class="page-footer__link-copyright" href="http://htmlacademy.ru">
+						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+							x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+							<path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
+							l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
+							l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787
+							l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65
+							l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036
+							v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+						</svg>
+					</a></p>
 				</div>
 			</div>
 		</footer>
