--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 		    		<img class="card__main-logo" src="img/card__main-logo.png" alt="Sedona"></img>
 		    		<img class="card__slogan" src="img/card__slogan.png" alt="Because the Grand Canyon sucks!"></img>
 		  		</div>
-		  		<svg class="card__svg-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" 
-		  			y="0px" width="1202px" height="57px" viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
+		  		<svg class="card__svg-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+		  				xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1202px" height="57px" 
+		  				viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
 					<g>
 						<polygon fill="#FFFFFF" points="250,23.71 0,0 0,57 250,57 601,57 250,0 	"/>
 						<polygon fill="#FFFFFF" points="952,23.71 952,0 601,57 952,57 1202,57 1202,0"/>
@@ -54,8 +55,9 @@
 
 			<!--Описание-->
 			<div class="description">
-				<svg class="description__svg-triangle" version="1.1" id="Layer_1" 
-						xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1202px" height="57px" viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
+				<svg class="description__svg-triangle" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+						xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1202px" height="57px" 
+						viewBox="0 0 1202 57" enable-background="new 0 0 1202 57" xml:space="preserve">
 						<g>
 							<polygon fill="#81b3d2" points="250,23.71 0,0 0,57 250,57 601,57 250,0 	"/>
 							<polygon fill="#81b3d2" points="952,23.71 952,0 601,57 952,57 1202,57 1202,0"/>
@@ -87,20 +89,52 @@
 				<div class="advantages">
 					<div class="advantages__wrap">
 						<section class="advantages__description">
-                            <div class="advantages__image"></div>
+                            	<svg class="advantages__image" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+                            		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.696px" height="72.345px" 
+                            		viewBox="0 0 74.696 72.345" enable-background="new 0 0 74.696 72.345" xml:space="preserve">
+									<g>
+										<path d="M29.503,43.845v0.5v18.062v1.469v1.469h16v-2v-0.938V44.345v-0.5v-2.438h-16V43.845z M42.566,62.407H32.441V44.345h10.125V62.407z"/>
+										<path d="M72.62,39.44l2.076-2.078l-9.908-9.913V0.47h-0.941H61.85h-7.938v0h-2.938v13.162L37.349,0L0,37.363l2.077,2.078l7.832-7.832v37.799H5.971v2.938h63.875v-2.938h-5.059V31.608L72.62,39.44z M53.913,3.408h7.938v21.104l-7.938-7.94V3.408zM61.85,69.407H12.846V28.671L37.348,4.169L61.85,28.671V69.407z"/>
+										<path d="M29.753,27.21c0,4.28,3.47,7.75,7.75,7.75s7.75-3.47,7.75-7.75s-3.47-7.75-7.75-7.75S29.753,22.93,29.753,27.21zM37.503,22.241c2.745,0,4.97,2.225,4.97,4.97s-2.225,4.97-4.97,4.97c-2.745,0-4.97-2.225-4.97-4.97S34.759,22.241,37.503,22.241z"/>
+										<rect x="16.909" y="41.407" width="3" height="3.938"/>
+										<rect x="22.846" y="41.407" width="3" height="3.938"/>
+										<rect x="16.909" y="47.407" width="3" height="3.938"/>
+										<rect x="22.846" y="47.407" width="3" height="3.938"/>
+										<rect x="48.846" y="41.407" width="3" height="3.938"/>
+										<rect x="54.784" y="41.407" width="3" height="3.938"/>
+										<rect x="48.846" y="47.407" width="3" height="3.938"/>
+										<rect x="54.784" y="47.407" width="3" height="3.938"/>
+									</g>
+								</svg>
                             <div class="advantages__title">
                                 <h2>Жилье</h2>
 							<p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                             </div>
 						</section>
 						<section class="advantages__description">
-                            <div class="advantages__image"></div>
+                        	<svg class="advantages__image" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+                        		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="76.166px" height="68.959px" 
+                        		viewBox="0 0 76.166 68.959" enable-background="new 0 0 76.166 68.959" xml:space="preserve">
+								<g>
+									<path d="M71.914,46.042H61.037H15.129H4.252C1.914,46.042,0,47.955,0,50.294v3.454C0,56.086,1.914,58,4.252,58h0.956v1.037c0,5.457,4.464,9.922,9.921,9.922h45.908c5.456,0,9.921-4.465,9.921-9.922V58h0.956c2.339,0,4.252-1.914,4.252-4.252v-3.454C76.166,47.955,74.253,46.042,71.914,46.042z M67.958,59.037c0,3.816-3.104,6.922-6.921,6.922H15.129c-3.816,0-6.921-3.105-6.921-6.922V58h59.75V59.037z M73.166,53.748c0,0.679-0.573,1.252-1.252,1.252h-1.005h-3.026h-59.6H5.257H4.252C3.573,55,3,54.427,3,53.748v-3.454c0-0.679,0.573-1.252,1.252-1.252h3.792h7.085h45.908h7.084h3.793c0.679,0,1.252,0.573,1.252,1.252V53.748z"/>
+									<polygon points="16.162,37.857 21.635,41.857 27.112,37.857 32.591,41.857 38.069,37.857 43.548,41.857 49.027,37.857 54.505,41.857 59.986,37.856 65.473,41.856 71.842,37.212 70.074,34.788 65.473,38.144 59.986,34.144 54.505,38.143 49.027,34.143 43.548,38.143 38.069,34.143 32.591,38.143 27.112,34.143 21.636,38.143 16.163,34.142 10.686,38.143 6.093,34.789 4.323,37.211 10.686,41.857 	"/>
+									<path d="M8.29,31.094h59.586h3.011c0.042-0.61,0.071-1.224,0.071-1.844c0-0.388-0.016-0.772-0.033-1.156
+									C70.242,12.476,55.804,0,38.083,0C20.363,0,5.924,12.476,5.241,28.094c-0.017,0.384-0.033,0.769-0.033,1.156c0,0.62,0.029,1.233,0.072,1.844H8.29z M38.083,3c16.031,0,29.15,11.154,29.842,25.094H8.241C8.933,14.154,22.051,3,38.083,3z"/>
+									<circle cx="38.083" cy="15.042" r="2"/>
+									<circle cx="30.083" cy="10.083" r="2"/>
+									<circle cx="46.083" cy="10.083" r="2"/>
+								</g>
+							</svg>
                             <div class="advantages__title">
 							<h2>Сувениры</h2>
                                 <p>Не только китайского, но и местного производства!</p></div>
 						</section>
 						<section class="advantages__description">
-                            <div class="advantages__image"></div>
+                            <svg class="advantages__image" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
+                            	xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"width="63px" height="75.084px" 
+                            	viewBox="0 0 63 75.084" enable-background="new 0 0 63 75.084" xml:space="preserve">
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M60.165,22.23h-0.103H35.758c13.603-6.815,14.688-11.115,14.188-13.52c-1.145-3.916-5.605-6.938-9.849-5.341c-5.484,2.063-7.028,10.262-8.513,16.19c-1.894-5.998-3.726-13.649-8.011-17.525c-1.242-1.125-3.049-2.237-5.676-2.003c-3.965,0.352-9.652,5.317-7.344,10.849c2.217,5.313,9.539,8.67,14.354,11.35H3.104h-0.27C1.275,22.23,0,23.506,0,25.065V36.25c0,1.559,1.275,2.834,2.835,2.834h0.27v33.062v2.405v0.532h56.958v-0.532v-2.405V39.084h0.103c1.56,0,2.835-1.275,2.835-2.834V25.065C63,23.506,61.725,22.23,60.165,22.23z M41.766,5.873c2.07-0.306,4.907,1.283,5.175,3.171c0.386,2.723-3.348,5.192-5.008,6.343c-2.484,1.723-4.852,2.611-7.177,4.006C35.628,15.748,37.267,6.539,41.766,5.873zM19.232,15.721c-2.19-1.467-6.444-4.378-6.342-7.678c0.11-3.552,5.655-6.491,8.68-3.839c3.797,3.331,5.625,10.972,7.01,16.357C25.381,19.042,22.35,17.808,19.232,15.721z M25.114,72.147H6.042V39.084h19.072V72.147z M25.114,36.084H3V25.23h22.114V36.084zM35.115,36.084v3v33.062h-7.063V39.084v-3V25.23h7.063V36.084z M57.125,72.147H38.053V39.084h19.072V72.147z M60,36.084H38.053V25.23H60V36.084z"/>
+							</svg>
                             <div class="advantages__title">
 							<h2>Еда</h2>
                                 <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p></div>
@@ -169,52 +203,46 @@
 		</main>
 
 		<!--Футер-->
-				<footer class="page-footer">
+		<footer class="page-footer">
 			<div class="page-footer__wrap">
 				<div class="page-footer__item">
 					<a class="page-footer__link-hashtag" href="#">#Visitsedona</a>
 				</div>
 				<div class="social-links">
 					<a class="social-links__item social-links__item--tw" href="http://tw.com">
-						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" enable-background="new 0 0 17.5 14.663" xml:space="preserve">
+						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+							x="0px" y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663" 
+							enable-background="new 0 0 17.5 14.663" xml:space="preserve">
 							<g id="W6EeEF_1_">
 								<g>
 									<path fill-rule="evenodd" clip-rule="evenodd" d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15
-										c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86
-										c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0
-										c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881
-										c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461
-										c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
+									c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z"/>
 								</g>
 							</g>
 						</svg>
 					</a>
 					<a class="social-links__item social-links__item--fb" href="http://fb.com">
 						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-							x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" enable-background="new 0 0 8.672 18.944" xml:space="preserve">
-							<path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114
-							H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787
-							C5.765,5.069,5.75,3.709,6.275,3.356z"/>
+							x="0px" y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944" 
+							enable-background="new 0 0 8.672 18.944" xml:space="preserve">
+							<path d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787C5.765,5.069,5.75,3.709,6.275,3.356z"/>
 						</svg>
 					</a>
 					<a class="social-links__item social-links__item--youtube" href="http://youtube.ru">
 						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-							x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" enable-background="new 0 0 19.979 14.015" xml:space="preserve">
-							<path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.	835-2.835V2.835
-							C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
+							x="0px" y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015" 
+							enable-background="new 0 0 19.979 14.015" xml:space="preserve">
+							<path d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z"/>
 						</svg>
 					</a>
 				</div>
 				<div class="page-footer__item">
 					<p class="page-footer__dev">Разработано<a class="page-footer__link-copyright" href="http://htmlacademy.ru">
 						<svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-							x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" enable-background="new 0 0 26.943 34.09" xml:space="preserve">
-							<path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334
-							l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5
-							l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787
-							l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65
-							l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036
-							v10.02L13.472,31.85L1.925,24.979V15.127z"/>
+							x="0px" y="0px" width="26.943px" height="34.09px" viewBox="0 0 26.943 34.09" 
+							enable-background="new 0 0 26.943 34.09" xml:space="preserve">
+							<path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.472,8.017l13.43-7.99l0.042-0.026V1.412L13.62,0.017z M25.019,12.127L13.495,5.334l-0.001-0.104L13.407,5.28l-0.088-0.056v0.109L1.925,12.118V3.147l11.547-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5l-4.479,2.64l-7.093-4.221l-0.013,1.415l5.904,3.513l-0.86,0.507l-5.031-2.992l-0.013,1.415l3.827,2.275l-0.782,0.523l-3.032-1.787l-0.013,1.413l1.852,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.015,1.044l-7.941-4.728L5.395,19.65
+							l7.979,4.796l0.017,1.076l-7.972-4.741l-0.013,1.415l8.021,4.821l0.045,0.026l8.143-4.872v-1.268l-0.011-0.148v-3.761l3.415-2.036v10.02L13.472,31.85L1.925,24.979V15.127z"/>
 						</svg>
 					</a></p>
 				</div>
