Добавлена графика для ретинных устройств

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 		        		xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="137px" height="70.778px" 
 		        		viewBox="0 0 137 70.778" enable-background="new 0 0 137 70.778" xml:space="preserve"><path d="M137,0h-14.173H14.173H0l31.279,35.161l0,0l27.8,31.249c5.182,5.824,13.66,5.824,18.842,0l27.8-31.249l0,0L137,0z"/>
 					</svg>
-					<img class="logo__img" src="img/logo-sedona@1x.png" alt="logo" width="68px" height="55px">
+					<picture>
+						<source srcset="img/logo-sedona@1x.png 1x"> 
+						<source srcset="img/logo-sedona@2x.png 2x">
+						<source srcset="img/logo-sedona@3x.png 3x">
+						<img class="logo__img" src="img/logo-sedona@1x.png" alt="City of Sedona" width="68px" height="56px">
+					</picture>
 		    	</a>
 		    	<a class="menu-open" href="/">
 		    		<svg class="menu-open__img" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" 
@@ -233,7 +238,11 @@
 		            </div>
 					<!--Картинка 1 причины-->
 					<div class="reason__image">
-							<img src="img/photo-city@1x.jpg"></img>
+						<picture>
+							<source srcset="img/photo-city@1x.jpg 1x">
+							<source srcset="img/photo-city@2x.jpg 2x">
+							<img src="img/photo-city@1x.jpg" width:"320px" height="256px"></img>
+						</picture>
 					</div>
 		        </div>
 
@@ -306,7 +315,11 @@
 		            </div>
 						<!--Картинка 2 причины-->
 						<div class="reason__image">
-							<img src="img/photo-bridge@1x.jpg"></img>
+							<picture>
+							<source srcset="img/photo-bridge@1x.jpg 1x">
+							<source srcset="img/photo-bridge@2x.jpg 2x">
+							<img src="img/photo-bridge@1x.jpg" width:"320px" height="256px"></img>
+						</picture>
 						</div>  
 				</div>
 
